--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "ionicons": "^5.0.0",
+    "lowdb": "^1.0.0",
     "react": "^16.13.0",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.0",
