--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "firebase": "^7.14.5",
     "ionicons": "^5.0.0",
     "lowdb": "^1.0.0",
     "react": "^16.13.0",
